--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
         <p class="my-5 pr-5">
             Retrieve Facebook Live Comment gives you the best way to get your live comments, and you can get only comment that you want automatically for your own business.
         </p>
-        <button type="button" data-toggle="modal" data-target="#exampleModalCenter" class="d-bd text-white border border-none px-4 py-1 font-weight-bold" style="font-size: 16px;">Try Free</button>
+        <button type="button" data-toggle="modal" data-target="#exampleModalCenter" class="d-bd text-white border border-none px-4 py-1 font-weight-bold" style="font-size: 16px;">Let Start</button>
 
     </div>
     <div class="w-50 text-center">
