--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -46,7 +46,7 @@
                                 <h4>Retrieve Facebook Live Comment</h4>
                                 <p>You need to login with facebook</p>
                                 <br>
-                                <div id="my_fb_button" class="fb-login-button mb-5" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="true" data-use-continue-as="true" scope="public_profile,email" onlogin="checkLoginState();">
+                                <div id="my_fb_button" class="fb-login-button mb-5" data-width="" data-size="large" data-button-type="continue_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="true" scope="public_profile,email" onlogin="checkLoginState();">
                                 </div>
                             </div>
                         </div>
