--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -60,7 +60,7 @@
                         <a class="nav-link" id="tolivecomment" href="/livecomment">Live Comment</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="toliveurl" href="/url">Live Url</a>
+                        <a class="nav-link" id="toliveurl" href="/tableurl">Live Url</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="toupgradeplan" href="/price">Upgrade Plan</a>
