--- a/views/tablecomment.ejs
+++ b/views/tablecomment.ejs
@@ -41,6 +41,7 @@
 </div>
 
 <script>
+    document.getElementById("btnLogin").style.display = 'none';
     let radios = document.querySelectorAll('.btn-group.btn-group-unselectable input[type="radio"]');
 
     radios.forEach(radio => {
